completed CRUD for book collection
